# myyoutube

./: .gitignore  Pipfile  README.md  YouTube.postman_collection.json  api.http  docker-compose.yaml  fixer.ipynb  manage.py  test.http
services/donationsplatform/: conftest.py  main.py  pyproject.toml  pytest.toml
services/donationsplatform/donations/: admin.py  tests.py  urls.py
services/donationsplatform/donationsplatform/: settings.py  urls.py
services/fastreports/: app.py  pyproject.toml
videoplatform/: Dockerfile  Pipfile  README.md  YouTube.postman_collection.json  all_sports.csv  conftest.py  manage.py  pyproject.toml  pytest.toml  queries.ipynb  reset.py  sports.json
videoplatform/accounts/: admin.py  choices.py  forms.py  managers.py  mixins.py  models.py  schema.py  sites.py  tests.py  utils.py  validators.py
videoplatform/accounts/api/: serializers.py  urls.py  views.py
videoplatform/accounts/fixtures/: accounts.json
videoplatform/accounts/graphql/: mutation.py  schema.py  types.py
videoplatform/accounts/migrations/: 0001_initial.py  0002_alter_myuser_username.py  0002_alter_viewingprofile_account_type_and_more.py  0003_alter_viewingprofile_account_type_and_more.py
videoplatform/accounts/tests/: test_accounts_api.py  test_graphql.py  utils.py
videoplatform/comments/: models.py  schema.py  tasks.py
videoplatform/comments/api/: algorithm.py  serializers.py  views.py
videoplatform/comments/migrations/: 0001_initial.py
videoplatform/donations/: admin.py  models.py  tasks.py  tests.py
videoplatform/donations/fixtures/: donations.json
videoplatform/donations/migrations/: 0001_initial.py
videoplatform/fixtures/: videos.json
videoplatform/history/: admin.py  models.py  tasks.py  tests.py  urls.py
videoplatform/history/graphql/: mutation.py  schema.py  types.py  utils.py
videoplatform/mediastats/: admin.py  managers.py  models.py
videoplatform/mychannel/: admin.py  api_views.py  choices.py  models.py  schema.py  serializers.py
videoplatform/notifications/: admin.py  choices.py  models.py  tasks.py  tests.py  views.py
videoplatform/playlists/: admin.py  managers.py  models.py  schema.py  tests.py
videoplatform/ratings/: admin.py  choices.py  managers.py  models.py  tasks.py  tests.py  urls.py  utils.py
videoplatform/reports/: admin.py  choices.py  models.py  tasks.py  urls.py
videoplatform/stories/: admin.py  models.py
videoplatform/uploads/: storage.py
videoplatform/videoplatform/: asgi.py  celery_app.py  custom_storages.py  schema.py  settings.py  urls.py  utils.py  views.py  wsgi.py
videoplatform/videos/: admin.py  choices.py  consumers.py  managers.py  models.py  processing.py  routing.py  schema.py  tasks.py  tests.py  urls.py  utils.py
(+1193 files in other folders)
