[project]
name = "donationsplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autopep8>=2.3.2",
    "celery>=5.6.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "django>=6.0.5",
    "django-axes>=8.3.1",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-import-export>=4.4.1",
    "django-redis>=6.0.0",
    "django-rest-framework>=0.1.0",
    "django-storages>=1.14.6",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.29.0",
    "graphene-django>=3.2.3",
    "gunicorn>=26.0.0",
    "nltk>=3.9.4",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "psycopg[binary,pool]>=3.3.4",
    "pymemcache>=4.0.0",
    "python-memcached>=1.62",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pytest>=9.0.3",
    "pytest-aio>=2.1.7",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
]

