[project]
name = "fastreports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pytest>=9.0.3",
    "pytest-aio>=2.1.7",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
]

